--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -105,3 +105,12 @@
   line-height: 1.22;
   letter-spacing: 0.02em;
 }
+@media (max-width: 479px) {
+  @include hide-on-tablet;
+}
+@media (min-width: 481px) and (max-width: 1199px) {
+  @include hide-on-tablet;
+}
+@media (min-width: 768px) {
+  @include hide-on-desktop;
+}
