--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -11,7 +11,6 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 480px;
   margin: 0 auto;
   margin-bottom: 60px;
 }
@@ -71,7 +70,7 @@
   margin: 0 auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1199px) {
   .main-page {
     min-width: 768px;
     height: 400px;
@@ -85,7 +84,6 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 768px;
     margin: 0 auto;
     margin-bottom: 60px;
   }
@@ -112,5 +110,59 @@
         ),
         url("../images/header/Img-header_2304_1200.jpg");
     }
+  }
+}
+
+@media (min-width: 1200px) {
+  .main-page {
+    min-width: 1200px;
+    height: 600px;
+    background-color: $secondaryBackgroundColor;
+    background-image: linear-gradient(
+        0deg,
+        rgba(47, 48, 58, 0.4) 0%,
+        rgba(47, 48, 58, 0.4) 100%
+      ),
+      url("../images/header/Img-header_1600_600.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    margin-bottom: 60px;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192pi),
+    (min-resolution: 2dppx) {
+    .main-page {
+      background-image: linear-gradient(
+          0deg,
+          rgba(47, 48, 58, 0.4) 0%,
+          rgba(47, 48, 58, 0.4) 100%
+        ),
+        url("../images/header/Img-header_3200_1200.jpg");
+    }
+  }
+  @media (min-device-pixel-ratio: 3),
+    (min-resolution: 268pi),
+    (min-resolution: 3dppx) {
+    .main-page {
+      background-image: linear-gradient(
+          0deg,
+          rgba(47, 48, 58, 0.4) 0%,
+          rgba(47, 48, 58, 0.4) 100%
+        ),
+        url("../images/header/Img_header_4800_1800.jpg");
+    }
+  }
+  .main-page__title {
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+    margin-top: 200px;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .main-page__button {
+    margin-bottom: 200px;
   }
 }
