--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -5,3 +5,32 @@
     display: none;
   }
 }
+@mixin hide-on-tablet {
+  .aboutus,
+  .menu-container {
+    display: none;
+  }
+}
+@mixin hide-on-desktop {
+  .menu-container,
+  .menu__toggle {
+    display: none;
+  }
+}
+
+@mixin underscoreAfterMixin($width) {
+  content: "";
+  display: block;
+  position: absolute;
+  width: $width;
+  height: 4px;
+  background-color: $logoWebColor;
+  border-radius: 2px;
+  margin-top: 28px;
+}
+
+@mixin navigationGeometryMixin($margin-left) {
+  display: flex;
+  flex: 1;
+  margin-left: $margin-left;
+}
