--- a/css/main.css
+++ b/css/main.css
@@ -590,6 +590,9 @@ h4 {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .footer__block__list {
     display: block;
