--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -177,6 +177,7 @@
   .footer__block {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     &__list {
       display: block;
       margin: 0;
