--- a/sass/components/_aboutus.scss
+++ b/sass/components/_aboutus.scss
@@ -40,6 +40,7 @@
     z-index: 1;
   }
   &__delay {
+    width: 1170px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -50,6 +51,4 @@
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   @include hide-on-tablet;
-}
-@media (min-width: 1200px) {
 }
