--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -169,7 +169,7 @@
   .footer {
     padding-top: 72px;
     padding-bottom: 60px;
-    min-width: 1600px;
+    min-width: 1200px;
     justify-content: center;
     margin: 0 auto;
   }
@@ -178,9 +178,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin: 0 auto;
     &__list {
       display: block;
-      margin: 0;
     }
   }
   .footer__list {
