--- a/css/main.css
+++ b/css/main.css
@@ -266,7 +266,7 @@ h4 {
     margin: 0 auto;
   }
   .page-header__overlay {
-    max-width: 1600px;
+    min-width: 1200px;
   }
   .aboutus,
   .menu-container {
@@ -762,6 +762,31 @@ h4 {
 @media (min-width: 1200px) {
   .main-page__button {
     margin-bottom: 200px;
+  }
+}
+@media (min-width: 1600px) {
+  .main-page {
+    min-width: 1600px;
+    height: 600px;
+    background-color: #2f303a;
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_1600_600.jpg");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_1600_600.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1600px) and (min-device-pixel-ratio: 2), (min-width: 1600px) and (min-resolution: 192pi), (min-width: 1600px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1600px) and (min-resolution: 2dppx) {
+  .main-page {
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_3200_1200.jpg");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_3200_1200.jpg");
+  }
+}
+@media (min-width: 1600px) and (min-device-pixel-ratio: 3), (min-width: 1600px) and (min-resolution: 268pi), (min-width: 1600px) and (-webkit-min-device-pixel-ratio: 3), (min-width: 1600px) and (min-resolution: 3dppx) {
+  .main-page {
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img_header_4800_1800.jpg");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img_header_4800_1800.jpg");
   }
 }
 .block {
