--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -168,3 +168,44 @@
     margin-bottom: 200px;
   }
 }
+@media (min-width: 1600px) {
+  .main-page {
+    min-width: 1600px;
+    height: 600px;
+    background-color: $secondaryBackgroundColor;
+    background-image: linear-gradient(
+        0deg,
+        rgba(47, 48, 58, 0.4) 0%,
+        rgba(47, 48, 58, 0.4) 100%
+      ),
+      url("../images/header/Img-header_1600_600.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192pi),
+    (min-resolution: 2dppx) {
+    .main-page {
+      background-image: linear-gradient(
+          0deg,
+          rgba(47, 48, 58, 0.4) 0%,
+          rgba(47, 48, 58, 0.4) 100%
+        ),
+        url("../images/header/Img-header_3200_1200.jpg");
+    }
+  }
+  @media (min-device-pixel-ratio: 3),
+    (min-resolution: 268pi),
+    (min-resolution: 3dppx) {
+    .main-page {
+      background-image: linear-gradient(
+          0deg,
+          rgba(47, 48, 58, 0.4) 0%,
+          rgba(47, 48, 58, 0.4) 100%
+        ),
+        url("../images/header/Img_header_4800_1800.jpg");
+    }
+  }
+}
