--- a/sass/components/_block.scss
+++ b/sass/components/_block.scss
@@ -6,7 +6,7 @@
   margin: 0 auto;
 }
 .block__item {
-  width: 450px;
+  min-width: 270px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,12 +22,17 @@
 
 .attribute {
   display: flex;
+  min-width: 270px;
+  flex-direction: column;
+  justify-content: center;
+}
+.attribute__icon {
   width: 450px;
   height: 120px;
-  justify-content: center;
   background-color: $thirdBackgroundColor;
   border-radius: 4px;
-  align-items: center;
+  justify-content: center;
+  padding: 25px 190px;
 }
 
 .attribute__title {
@@ -38,12 +43,18 @@
   justify-content: center;
 }
 .attribute__text {
+  width: 450px;
   color: $alternativeColor;
   font-size: 14px;
   line-height: 1.71;
+  letter-spacing: 0.03em;
+
   margin: 0;
 }
 @media (min-width: 768px) and (max-width: 1199px) {
+  .block {
+    margin-bottom: 45px;
+  }
   .block__list {
     width: 738px;
     display: flex;
@@ -51,27 +62,38 @@
     gap: 30px;
     margin: 0 auto;
   }
+
   .block__item {
     max-width: 354px;
     flex-basis: calc((100% - 1 * 30px) / 2);
   }
-
-  .block__item:last-child {
-    margin-bottom: 30px;
+  .block__item:nth-child(n) {
+    margin-bottom: 0;
   }
   .attribute {
     width: 354px;
   }
-
-  .attribute__title {
+  .attribute__icon {
     width: 354px;
+    height: 120px;
+    padding: 25px 142px;
+  }
+  .attribute__title {
+    min-width: 354px;
     justify-content: flex-start;
+  }
+  .attribute__text {
+    width: 354px;
+    height: 65px;
   }
 }
 @media (min-width: 1200px) {
   .block {
     margin-bottom: 0;
     padding-bottom: 0;
+  }
+  .block__delay {
+    width: 1170px;
   }
   .block__list {
     width: 1170px;
@@ -88,7 +110,11 @@
   .attribute {
     width: 270px;
   }
-
+  .attribute__icon {
+    width: 270px;
+    height: 120px;
+    padding: 25px 100px;
+  }
   .attribute__title {
     width: 270px;
     justify-content: flex-start;
