--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -33,20 +33,20 @@ h4 {
   justify-content: center;
   margin: 0;
 }
-@media (max-width: 480px) {
+@media (min-width: 320px) {
   .container {
-    width: 480px;
+    min-width: 320px;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1199px) {
   .container {
-    width: 768px;
+    max-width: 768px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1200px;
+    max-width: 1200px;
   }
   h2 {
     font-size: 36px;
