--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,6 +2,7 @@
   background-color: $secondaryBackgroundColor;
   padding-top: 60px;
   padding-bottom: 60px;
+  min-width: 100%;
 
   &:hover,
   &:focus {
@@ -97,7 +98,7 @@
   }
   &__input {
     display: flex;
-    width: 358px;
+    min-width: 358px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
