--- a/sass/components/_ourteam.scss
+++ b/sass/components/_ourteam.scss
@@ -1,9 +1,10 @@
 .ourteam {
   background-color: $thirdBackgroundColor;
-  min-width: 480px;
+  min-width: 320px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 0 auto;
   &__delay {
     display: flex;
     flex-wrap: wrap;
@@ -93,8 +94,6 @@
     height: 374px;
   }
   .ourteam__item {
-    width: 354px;
-    height: 536px;
     flex-basis: calc((100% - 1 * 30px) / 2);
   }
   .ourteam__item:not(:last-child) {
@@ -124,7 +123,7 @@
   }
   .ourteam__item {
     width: 270px;
-    height: 428px;
+
     flex-basis: calc((100% - 3 * 30px) / 4);
   }
   .ourteam__item:nth-child(n) {
