--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,6 +2,7 @@
   background-color: $secondaryBackgroundColor;
   padding-top: 60px;
   padding-bottom: 60px;
+  margin: 0 auto;
   min-width: 100%;
 
   &:hover,
