--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -29,7 +29,7 @@
   &__item {
     fill: $colorFiller;
     flex-basis: calc((100% - 1 * 30px) / 2);
-    width: 210px;
+    max-width: 210px;
     border-radius: 4px;
     display: flex;
     justify-content: center;
